<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">চাষাবাদ</string>
    <string name="title_text">ফসল বাছাই করুন</string>
    <string name="main_cucumber_title_text">শসা চাষ চক্র</string>
    <string name="main_tomato_title_text">টমেটো চাষ চক্র</string>
    <string name="main_carrot_title_text">গাজর চাষ চক্র</string>
    <string name="main_radish_title_text">মূলা চাষ চক্র</string>
    <string name="guide_text">ছবি চাপুন, তথ্য জানুন</string>
    <string name="lang_btn_text">English</string>
    <string name="title_activity_seed">বীজ</string>
    <string name="cucumber_seed_text">
        "শসা বীজ মাটি থেকে পানি ও পুষ্টি উপাদান শোষণ করে।\n\n"
        "বীজ থেকে অঙ্কুর বের হবার জন্য আর্দ্রতা খুবই গুরুত্বপূর্ণ।"
        "এটি বীজের খোসা নরম হতে সাহায্য করে। আর্দ্রতা বীজের ভিতরে থাকা আমিষ বা শর্করার সাথে মিশে অঙ্কুরের জন্য প্রয়োজনিয় পুষ্টি উপাদান তৈরি করে।"
    </string>
    <string name="cucumber_seedling_text">
        "সাধারণত বীজ বোনার ৩ থেকে ১০ দিন পর অঙ্কুরোদগম হয়।"
        "কিন্তু কখনো কখনো ২১ দিনও লাগতে পারে।\n\n"

        "অঙ্কুরোদগমের পর বীজের ভেতর থেকে কটাইলেডন নামে দুটি পাতা বের হয়।"
        "এই পাতা দুটির সাহায্যে শসার চারা সালোকসংশ্লেষণ (সূর্যের আলো থেকে খাবার তৈরি) শুরু করে।"
    </string>
    <string name="cucumber_vine_text">
        " এই ধাপে শসা গাছ ও পাতা পরিণত হতে থাকে।"
        " যখন গাছ আরও লম্বা এবং আরও শক্ত হতে থাকে, তখন শক্ত মাঁচা করে দিতে হবে।\n\n"

        "গাছে নিয়মিত নতুন পাতা আসতে থাকে। আশপাশে থাকা যেকোন জিনিস আঁকড়ে ধরে ভর দিতে গাছে আঁকশি গজায়।"
    </string>
    <string name="cucumber_flower_text">
        "অঙ্কুর বের হবার ৩৫ দিন পর গাছে পুরুষ ফুল আসা শুরু করে। এর ১০ দিন পর স্ত্রী ফুল আসা শুরু হয়।"
        "স্ত্রী ফুলের পিছনে অপরিণত শসার মত ফোলা অংশ থাকে। এটা ফুলের গর্ভাশয়, যা ৭ থেকে ১২ দিনের মধ্যে শসা হয়ে যায়।"
    </string>
    <string name="cucumber_fruit_text">
        "শসা উৎপাদনে ৪ থেকে ১২ সপ্তাহ সময় লাগে।"
        "সর্বোচ্চ ফলনের জন্য সময়মত গাছ থেকে শসা তোলা খুবই গুরুত্বপূর্ণ।"
        "পরিণত হওয়ার আগেই শসা তুলে ফেলতে হয়।\n\n"
        "শসা যখন গাছেই পরিণত হয়, তখন এটি শসা ধরা কমিয়ে দিতে গাছের বাকি অংশকে সংকেত পাঠায়।"
        "এতে ফলন কমে যায়।"
    </string>
    <string name="cucumber_text">
        "সাধারণত, শসা যখন ৫ থেকে ৮ ইঞ্চি লম্বা আর ২ ইঞ্চি মোটা হয়, তখনই গাছ থেকে খুলে ফেলা উচিৎ।\n\n"
        "অঙ্কুর বের হবার ৪৮ থেকে ৭৬ দিনের মধ্যে ক্ষেতের শসা তোলা যায়।"
    </string>
    <string name="tomato_seed_text">
        "টমেটো চাষ করা হয় চারা তৈরি করে। এজন্য বীজতলায় বীজ বুনে সেখানে চারা তৈরি করে নিতে হয়। সরাসরি জমিতে বীজ বুনেও টমেটো চাষ করা যায়। তবে দ্রুত ভাল ফলন পাওয়ার জন্য আলাদাভাবে চারা তৈরি করে সেই চারা মূল জমিতে লাগাতে হবে।সরাসরি জমিতে বীজ বুনেও টমেটো চাষ করা যায়। তবে দ্রুত ভাল ফলন পাওয়ার জন্য আলাদাভাবে চারা তৈরি করে সেই চারা মূল জমিতে লাগাতে হবে।\n\n"
        "টমেটো চাষে সফলতার জন্য কেনা বীজ বা ঘরে রাখা বীজ প্রথমে শোধন করে নিতে হবে।"
        "রোদযুক্ত উঁচু জায়গায় পরিস্কার করে ভালভাবে মাটি চাষ দিয়ে বীজতলা তৈরি করতে হবে। চাষের পর মাটি সমতল করে ১ মিটার চওড়া করে বেড বানাতে হবে। বেড খুব বেশি লম্বা না করে ৩-৫ মিটার করা ভাল। এতে পরিচর্যার সুবিধে হয়।\n\n"
        "বীজতলার মাটিও শোধন করে নিলে ভাল হয়। বীজ তলার মাটি চাষ দিয়ে তাতে জৈব সার মিশিয়ে পলিথিন দিয়ে দু’সপ্তাহ ভাল করে ঢেকে রেখে দিলে সূর্যের তাপে মাটিতে থাকা অনেক জীবাণু মরে যায় ও বীজতলার মাটি শোধন হয়ে যায়। সময়স্বল্পতার ক্ষেত্রে, বীজতলার মাটির উপরে ৩ ইঞ্চি পুরু করে কাঠের গুঁড়া বিছিয়ে আগুন দিলে সে তাপেও রোগ জীবাণু নষ্ট হয়।\n\n"
        "ছিটিয়ে বীজতলায় বীজবপন করা যায়। ছিটিয়ে বপনের জন্য সাধারণত: প্রতি বর্গমিটার বীজতলার জন্য ১০০-১৫০ গ্রাম বীজ লাগে। বীজ থেকে চারা গজাতে ৬-১৪ দিন লাগে। শীতকালীন টমেটো চাষের জন্য বীজ বুনতে হবে কার্তিক-অগ্রহায়ণ মাসে। আগাম চাষের জন্য শ্রাবণ-ভাদ্র মাসে বীজ বুনতে হবে।"
    </string>
    <string name="tomato_seedling_text">
        "জমি ৪-৫ বার চাষ ও মই দিয়ে মাটি ঝুরঝুরা করে নিতে হয়। "
        "গ্রীষ্মকালে টমেটো চাষের জন্য ২০-২৫ সেন্টিমিটার উঁচু এবং ২৩০ সেন্টিমিটার চওড়া বেড তৈরি করতে হয়। "
        "সেচ দেওয়ার সুবিধার্থে ২টি বেডের মাঝে ৩০ সেন্টিমিটার নালা রাখতে হয়।"
        "প্রতিটি বেডে ২ সারি করে ৬০x৪০ সেন্টিমিটার দূরত্বে ২৫-৩০ দিন বয়সের চারা রোপণ করতে হয়।\n\n"

        "শীতকালীন টমেটোর জন্য মধ্য কার্তিক থেকে মাঘের ১ম সপ্তাহ (নভেম্বর থেকে মধ্য জানুয়ারি) পর্যন্ত চারা রোপণ করা যায়। "
        "তবে আগাম চাষের জন্য রোপণ সময় এগিয়ে আনতে হবে। "
        "আগাম চাষের জন্য ভাদ্র-আশ্বিন মাসে এবং নাবি চাষের ফাল্গুণ মাসে এবং গ্রীষ্মকালীন চাষের জন্য চৈত্র-বৈশাখ মাসে চারা রোপণ করতে হবে।"
    </string>
    <string name="tomato_vine_text">
        "মরা পাতা ছাঁটাই টমেটো গাছের জন্য অতি প্রয়োজনীয় একটি কাজ। এ ছাড়া প্রয়োজনে সেচ দেয়াও যেতে পারে।\n\n"
        "ভাইরাস রোগ দেখা দিলে গাছ তুলে ফেলতে হবে।"
    </string>
    <string name="tomato_flower_text">
        "গ্রীষ্মকালীন চাষের ক্ষেত্রে পাশাপাশি ২টি বেডের জন্য নৌকার ছইয়ের আকৃতি করে স্বচ্ছ পলিথিন দিয়ে ১টি ছাউনি দিতে হবে। "
        "এই মৌসুমে টমেটো উৎপাদনের প্রায় ৭০ ভাগের ও বেশী সাফল্য নির্ভর করে টমেটো গাছে পলিথিন ছাউনি দেয়ার উপর। "
        "ছাউনির খুটির উভয় পাশের উচ্চতা ১৫০ সে.মি. এবং মাঝখানের খুটির উচ্চতা ২১০ সে.মি হয়ে থাকে। "
        "দুটি ছাউনির মাঝে অন্তত ৭৫ সে.মি চওড়া নালা রাখতে হবে। যাতে করে ছাউনি থেকে নির্গত বৃষ্টির পানি নিস্কাশনসহ বিভিন্ন পরিচর্যা করতে সুবিধা হয়। "
        "গ্রীস্মকালীন টমেটো গাছে প্রচুর ফুল ধরে তবে উচ্চ তাপমাত্রা ও অতিবৃষ্টি পরাগায়নে বিঘ্ন ঘটায়।"
    </string>
    <string name="tomato_fruit_text">
        "জাত ও লাগানোর সময়ের উপর নির্ভর করে ২-৪ মাসের মধ্যেই ফসল তোলার সময হয়। "
        টমেটো পাকা ও কাঁচা উভয় অবস্থায়ই তোলা যায়।"
    </string>
    <string name="tomato_text">
        "দূরে পাঠানোর জন্য একেবারে পাকা টমেটো তোলা উচিত নয় এবং পাকানোর জন্য বা টমেটোর ভাল রঙ আনার জন্য কৃত্রিম হরমোন ব্যবহারও ঠিক নয়। "
        "প্রতি হেক্টরে ফলন ২০-৪০ টন।"
    </string>
    <string name="carrot_seed_text">
	    "গাজর চাষে প্রতি হেক্টরে ৩-৪ কেজি বীজ লাগে।\n\n"
	    "পানি নিষ্কাশনের ব্যবস্থা আছে এমন বেলে দোঁআশ ও দোআঁশ মাটি গাজর চাষের জন্য উপযোগী।"
	    "ভালভাবে চাষ ও মই দিয়ে ক্ষেত তৈরী করতে হবে। জমির মাটি ঝুরঝুরে করে নিতে হবে।\n\n"
	    "গাজরের বীজ সারিতে বপন করা ভাল। এতে গাজরের যত্ন নেয়া সহজ হয়।"
	    "গাজর বীজ খুব ছোট বিধায় ছাই বা গুড়া মাটির সাথে মিশিয়ে বপন করা ভাল। এজন্য ভাল বীজের সাথে ভাল শুকনা ছাই বা গুড়া মাটি মিশিয়ে বপন করা যেতে পারে।"
	    "জমিতে ২ সারির মাঝের দূরত্ব হতে হবে ২০-২৫ সে.মি.। আর গাছ থেকে গাছের দূরত্ব ১০ সে.মি.।\n\n"
	    "বীজ থেকে চারা গজাতে ১০-২০ দিন সময় লাগতে পারে। তবে বপনের আগে বীজ ভিজিয়ে রাখলে (১৮-২৪ ঘন্টা) ৭-১০ দিনের মধ্যে চারা বের হয়।"
    </string>
    <string name="carrot_seedling_text">
	    "চারা গজানোর ৮-১০ দিন পর ৮-১০ সেমি পরপর ১ টি করে গাছ রেখে বাকী সব উঠিয়ে ফেলতে হবে। "
        "একই সাথে আগাছা পরিস্কার ও মাটির চটা ভেঙ্গে দিতে হবে।\n\n"

	    "প্রয়োজনমত সেচ দেয়া ও নিষ্কাশনের ব্যবস্থা করতে হবে। মাটির জো দেখে দুসপ্তাহ পরপর ৩-৪ টি সেচ দেয়া উৎপাদনের জন্য ভালো।"
    </string>
    <string name="carrot_plant_text">
	"গজানোর পর চারা একটু শক্ত হওয়ার পর পর্যায়ক্রমে চারা পাতলা করে দিতে হবে। \n\n"
	"মাটিতে যখন রস কম হবে, তখন পানি সেচ দিতে হবে। "
	"সেচের পর যখন জো আসবে, তখন নিড়ানি দিয়ে চটা ভেঙ্গে মাটি আলগা করে দিতে হবে। জন্মানো আগাছা দমন করতে হবে।"
    </string>
    <string name="carrot_text">
	"চারা গজানোর ৭০-৮০ দিন পর সবজি হিসেবে গাজর খাওয়ার জন্য তোলার উপযুক্ত হয়।\n\n"

	"হেক্টরপ্রতি গাজরের ফলন ২০-২৫ টন।"
    </string>
    <string name="carrot_rootcut_text">
	"৭০ থেকে ৮০ দিন বয়সের গাজর উঠিয়ে ১ থেকে ২ ইঞ্চি পরিমাণ ডগা রেখে এবং মূলের অর্ধেক পরিমাণ নিচের অংশ কেটে ফেলে দিতে হবে।"
	"এরপর গাজরের মূলকে ছত্রাকনাশকে ৫ মিনিট ডুবিয়ে রাখার পর ছায়াযুক্ত স্থানে মূল জমিতে ৫০ সেন্টিমিটার থেকে ১ মিটার দূরে দূরে মূলের কাটা অংশের অর্ধেক পরিমাণ অংশ মাটিতে পুঁতে দিতে হবে।"
	"গাছ থেকে ১ থেকে ২ মাসের মধ্যে ফুল আসে এবং তা থেকে ৩ থেকে ৪ মাসের মধ্যে গাজরের বীজ সংগ্রহ করতে হবে।"
    </string>
    <string name="carrot_non_rootcut_text">
	"গাছে ফুল আসার ৩০ থেকে ৪০ দিন পর গাজরে ফল যখন পেকে শুকিয়ে খড়ের মতো বাদামি রঙ ধারণ করে এবং ফলের ডাঁটা শুকিয়ে যায়, তখন ভোরের দিকে ডাঁটাসহ ফল সংগ্রহ করতে হবে। যথাযথভাবে সংরক্ষণ করে দুই থেকে তিন বছর পর্যন্ত গাজর বীজের অঙ্কুরোদগম ক্ষমতা অক্ষুণ্ন থাকে।"
    </string>
    <string name="action_settings">সেটিংস</string>
    <string name="title_activity_seedling">চারা</string>
    <string name="title_activity_vine">গাছ</string>
    <string name="title_activity_flower">ফুল</string>
    <string name="title_activity_fruit">ফল</string>
    <string name="title_activity_cucumber">শসা</string>
    <string name="title_activity_carrot">গাজর</string>
    <string name="title_activity_rootcutting">রুট কাটিং</string>
    <string name="title_activity_non_rootcutting">সাধারণ পদ্ধতি</string>
    <string name="arrow">তীর চিহ্ন</string>
    <string name="title_activity_tomato">টমেটো</string>
</resources>