<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="?attr/actionBarTheme"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/lang_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/lang_btn_text"
                android:textAllCaps="false"
                android:backgroundTint="@android:color/white"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
    
    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/title_text"
        android:textSize="10pt"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintTop_toBottomOf="@+id/title_textView">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/cucumber_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_cucumber"
                android:backgroundTint="#F5F5F5"
                android:textColor="#00FF00"
                android:textSize="22sp"
                android:textAllCaps="false"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintTop_toTopOf="parent"
                />
            <Button
                android:id="@+id/tomato_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_tomato"
                android:backgroundTint="#F5F5F5"
                android:textColor="#00FF00"
                android:textSize="22sp"
                android:textAllCaps="false"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintTop_toBottomOf="@+id/cucumber_button"
                />
            <Button
                android:id="@+id/carrot_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_carrot"
                android:backgroundTint="#F5F5F5"
                android:textColor="#00FF00"
                android:textSize="22sp"
                android:textAllCaps="false"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintTop_toBottomOf="@+id/tomato_button"
                />
            <!--Button
                android:id="@+id/radish_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_radish"
                android:backgroundTint="#F5F5F5"
                android:textColor="#00FF00"
                android:textSize="22sp"
                android:textAllCaps="false"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintTop_toBottomOf="@+id/carrot_button"
                /-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>