<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainCarrotActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="?attr/actionBarTheme"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <!--Button
                android:id="@+id/lang_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/lang_btn_text"
                android:textAllCaps="false"
                android:backgroundTint="@android:color/white"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!--androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"-->
    <TextView
        android:id="@+id/carrot_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/main_carrot_title_text"
        android:textSize="10pt"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/button"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/carrot_seeds"
        android:contentDescription="@string/title_activity_seed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carrot_title_textView" />

    <TextView
        android:id="@+id/seed_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_seed"
        android:textSize="8pt"
        android:textColor="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/arrow"
        android:rotation="50"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/seed_fig_name"
        app:srcCompat="@drawable/blue_arrow2_1" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/carrot_seedlings"
        android:contentDescription="@string/title_activity_seedling"
        app:layout_constraintBottom_toTopOf="@+id/seedling_fig_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/seedling_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_seedling"
        android:textColor="@color/purple_200"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/arrow"
        android:rotation="88"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/plant_fig_name"
        app:srcCompat="@drawable/blue_arrow2_1" />

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:background="@drawable/carrots"
        android:contentDescription="@string/title_activity_carrot"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/carrot_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_carrot"
        android:textColor="@color/purple_200"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/arrow"
        android:rotation="132"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:srcCompat="@drawable/blue_arrow2_1" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:background="@drawable/carrot_plants"
        android:contentDescription="@string/title_activity_flower"
        app:layout_constraintBottom_toTopOf="@+id/plant_fig_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/plant_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_vine"
        android:textColor="@color/purple_200"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/arrow"
        android:rotation="-124"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:srcCompat="@drawable/blue_arrow2_1" />

    <ImageButton
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:background="@drawable/carrot_root_cut"
        android:contentDescription="@string/title_activity_rootcutting"
        app:layout_constraintBottom_toTopOf="@+id/rootcut_fig_name"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/rootcut_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_rootcutting"
        android:layout_marginTop="5dp"
        android:textSize="8pt"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button5"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/arrow"
        android:rotation="-90"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/seed_fig_name"
        app:srcCompat="@drawable/blue_arrow2_1" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/arrow"
        android:rotation="-90"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/rootcut_fig_name"
        app:srcCompat="@drawable/blue_arrow2_1" />

    <ImageButton
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/carrot_fruit"
        android:contentDescription="@string/title_activity_non_rootcutting"
        app:layout_constraintBottom_toTopOf="@+id/non_rootcut_fig_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/non_rootcut_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_non_rootcutting"
        android:textColor="@color/purple_200"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/arrow"
        android:rotation="-42"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/seed_fig_name"
        app:srcCompat="@drawable/blue_arrow2_1" />

    <TextView
        android:id="@+id/guide_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_text"
        android:textColor="@color/purple_500"
        android:textSize="9pt"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>